# glfw-boilerplate

./: CMakeLists.txt  README.md
projects/boilerplate/: CMakeLists.txt
projects/boilerplate/src/: main.cpp
